--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
 layout: home
-title: XeChao Inside
-subtitle: hey friend, wasssssssup
+title: INTO my Meow Meow
+subtitle: see what I've found here
 ---
-
